--- a/pages/photos.html
+++ b/pages/photos.html
@@ -113,7 +113,7 @@
                 <div class="search_container">
                     <i class="fas fa-search feature_search"></i>
                     <form>
-                        <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
+                        <input type="text" id="Search" placeholder="Search Images, Vectors and Illustrations">
                         <input type="submit" id="search_submit">
                     </form>
                     <div class="search-select">
