--- a/pages/vectors.html
+++ b/pages/vectors.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ImageGram</title>
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
         <link rel="stylesheet" href="/style/index.css">
         <link rel="stylesheet" href="/style/register.css">
         <link rel="stylesheet" href="/style/vector.css">
@@ -14,12 +13,6 @@
         <script src="/config.js"></script>
         <script src="/scripts/photos.js"></script>
         <script src="/scripts/vector.js"></script>
-        <!-- <script src="nav-dropdown.js"></script> -->
-        <style>
-            .show {
-                display: block;
-            }
-        </style>
 
     </head>
     <body>
@@ -114,7 +107,7 @@
                 <div class="search_container">
                     <i class="fas fa-search feature_search"></i>
                     <form>
-                        <input type="text" id="Search" placeholder="Search Images, Vectors and Videos">
+                        <input type="text" id="Search" placeholder="Search Images, Vectors and Illustrations">
                         <input type="submit" id="search_submit">
                     </form>
                     <div class="search-select">
