--- a/pages/vectors.html
+++ b/pages/vectors.html
@@ -13,6 +13,7 @@
         <script src="/config.js"></script>
         <script src="/scripts/photos.js"></script>
         <script src="/scripts/vector.js"></script>
+        <script src="/scripts/session.js"></script>
 
     </head>
     <body>
