--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="./scripts/index.js"></script>
         <script src="./config.js"></script>
+        <!-- <script src="/scripts/session.js"></script> -->
         
 
     </head>
