--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="./scripts/index.js"></script>
         <script src="./config.js"></script>
-        <!-- <script src="/scripts/session.js"></script> -->
+        <script src="/scripts/session.js"></script>
         
 
     </head>
@@ -70,7 +70,7 @@
                         </div>                          
                     </li>
                     <li class="display-right nav-pad"><a id="login" href="/pages/login.html">Log in</a></li>
-                    <div>
+                    <div class="hr-line">
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
                     <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
@@ -81,7 +81,7 @@
                             <li><a href="/pages/upload.html">Upload</a></li>
                             <li><a href="/pages/settings.html">settings</a></li>
                             <hr>
-                            <li><a href="#">Logout</a></li>
+                            <li onclick="logOut()"><a href="#" onclick="logOut()">Logout</a></li>
                         </ul>
                     </li>
                     <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
