--- a/pages/photos.html
+++ b/pages/photos.html
@@ -13,6 +13,7 @@
         <script src="../scripts/index.js"></script>
         <script src="/config.js"></script>
         <script src="../scripts/photos.js"></script>
+        <script src="/scripts/session.js"></script>
         <!-- <script src="nav-dropdown.js"></script> -->
         <style>
             .show {
@@ -82,7 +83,7 @@
                     </li>
                     <!-- <i class="fas fa-angle-down"></i> -->
                     <li class="display-right nav-pad"><a id="login" href="/pages/login.html">Log in</a></li>
-                    <div>
+                    <div class="hr-line">
                         <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                     </div>
                     <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
