--- a/pages/search.html
+++ b/pages/search.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/style/login.css">
     <link rel="stylesheet" href="../style/search.css">
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/index.js"></script>
     <script src="../scripts/search.js"></script>
     <script src="/config.js"></script>
@@ -88,11 +89,21 @@
                         
                 </li>
                 <li class="display-right nav-pad"><a id="login" href="/pages/login.html">Log in</a></li>
-                <div>
+                <div class="hr-line">
                     <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                 </div>
                 <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
-                <li class="display-right nav-pad"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></li>
+                <li class="user_profile_pic"></li>
+                <li class="user_profile_dropdown is_active">
+                    <ul>
+                        <li><a href="/pages/myprofile.html">My Profile</a></li>
+                        <li><a href="/pages/upload.html">Upload</a></li>
+                        <li><a href="/pages/settings.html">settings</a></li>
+                        <hr>
+                        <li onclick="logOut()"><a href="#">Logout</a></li>
+                    </ul>
+                </li>
+                <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
                 <li class="menu-bar">
                     <a href="#">
                         <i class="fas fa-bars"></i>
@@ -108,5 +119,18 @@
             </div>
         </div>
     </div>
+    <script>
+        $(document).ready(() => {
+            $('.user_profile_pic').click((e) => {
+                e.stopPropagation();
+                $('.user_profile_dropdown').fadeToggle('fast');
+            })
+
+            $(document).click(() => {
+                $('.user_profile_dropdown').hide();
+            })
+            
+        })
+    </script>
 </body>
 </html>
