--- a/pages/settings.html
+++ b/pages/settings.html
@@ -12,7 +12,7 @@
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/scripts/index.js"></script>
-        <script src="/scripts/session.js"></script>
+        <!-- <script src="/scripts/session.js"></script> -->
     </head>
     <body>
         <header>
