--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <p>Free Images and Videos you can use anywhere</p>
                             <p>JOIN ImageGram</p>
                             <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
-                            <a href="/pages/register.html"><button>Sign up, it's free!</button></a>
+                            <a class="sign-up" href="/pages/register.html"><button>Sign up, it's free!</button></a>
                         </div>
                     </div>
                 </div>
