--- a/pages/upload.html
+++ b/pages/upload.html
@@ -144,6 +144,7 @@
         <script>
             window.onload = () => {
                 searchImages();
+                dropDown();
             }
 
             searchImages = () => {
