profile page image added

--- a/pages/upload.html
+++ b/pages/upload.html
@@ -123,10 +123,10 @@
         <div class="upload_image">
             <form id="upload-user-image">
                 <label for="name">Name of the Image:</label>
-                <input type="text" id="name" name="name"><br><br>
+                <input type="text" id="name" name="name" required><br><br>
                 <label id="tag" for="tags">Enter any <b>Four</b> tags that describes the Image:</label>
-                <input type="text" id="tags" name="tags" data-role="tagsinput" />
-                <input id="image_upload" type="file" name="image">
+                <input type="text" id="tags" name="tags" data-role="tagsinput" required/>
+                <input id="image_upload" type="file" name="image" required>
                 <input id="submit" type="submit" value="Submit">
             </form>
             
