--- a/pages/settings.html
+++ b/pages/settings.html
@@ -137,11 +137,13 @@
                             <div class="profile_image_setting"><span id="profile">Profile Image</span>
                                 <!-- <div class="profile_image_heading">Profile Image</div> -->
                                 <div class="profile_image_box">
-                                    <img src="" alt="" />
-                                    <input type="file" id="actual-btn" name="profileImage" hidden/>
-                                    <label for="actual-btn">Upload Image</label>
+                                    <label for="profile-image">Upload photo</label>
+                                    <input type="file" id="profile-image" name="profileImage" />
                                 </div>
                             </div>
+
+
+
                             <div class="place_setting">
                                 <div class="city_setting"><span id="city">City</span>
                                     <!-- <div class="city_heading">City</div> -->
@@ -165,9 +167,18 @@
                                 <div id="set-password"><a id="set-password" href="">Change Password</a></div>
                                 <div id="del-account"><a id="del-account" href="">Deactivate account</a></div>
                             </div>
+
+                            <!-- Cover Image -->
+
+                            <div class="cover-image">
+                                <label for="cover-image"><b>Cover Image:</b> </label>
+                                <input type="file" name="cover-image" id="cover-image">
+                            </div>
                         </div>
                     </div>
                 </div>
+
+
 
                 <div class="settings_save">
                     <input type="submit" value="Save">
@@ -204,7 +215,8 @@
 
             form.addEventListener("submit", (e) => {
                 e.preventDefault();
-                let profileImage = document.querySelector('input[type="file"]');
+                let profileImage = document.querySelector("#profile-image");
+                let coverImage = document.querySelector("#cover-image");
 
                 let formData = new FormData()
 
@@ -219,6 +231,7 @@
                 formData.append("username", username);
                 formData.append("city", city);
                 formData.append("country", country);
+                formData.append("coverImage", coverImage.files[0])
                 formData.append("profileImage", profileImage.files[0]);
 
                 console.log(formData)
@@ -236,6 +249,8 @@
                 })
             })
 
+            let token = window.localStorage.getItem("token")
+            console.log(token)
             
             
 
