added profile image in home page

--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -88,7 +88,7 @@
                 <!-- <i class="fas fa-angle-down"></i> -->
                 <li class="display-right nav-pad"><a id="login" href="/pages/login.html">Log in</a></li>
                 <div>
-                    <hr style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
+                    <hr class="hr-line" style="display: inline; width: 100%; position: relative; color: #adb5bd !important;">
                 </div>
                 <li class="display-right join nav-pad"><a href="/pages/register.html">Join</a></li>
                 <li class="user_profile_pic"></li>
