--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                 </div>
             </div>
         </div>
+        <!-- <script src="./scripts/myprofile.js"></script> -->
         
         <script>
             $(document).ready(() => {
