added individual page image and username

--- a/pages/upload.html
+++ b/pages/upload.html
@@ -149,6 +149,7 @@
             window.onload = () => {
                 searchImages();
                 dropDown();
+                userSettingFetch()
             }
 
             searchImages = () => {
