--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -14,6 +14,7 @@
     <script src="../scripts/index.js"></script>
     <script src="../scripts/individual.js"></script>
     <script src="../config1.js"></script>
+    <script src="../scripts/session.js"></script>
 </head>
 <body>
     <header>
@@ -98,7 +99,7 @@
                             <li><a href="/pages/upload.html">Upload</a></li>
                             <li><a href="/pages/settings.html">settings</a></li>
                             <hr>
-                            <li><a href="#">Logout</a></li>
+                            <li onclick="logOut()"><a href="#" onclick="logOut()">Logout</a></li>
                         </ul>
                     </li>
                 <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
@@ -116,8 +117,8 @@
     <div class="individual-image-main">
         <div class="individual_container">
             <div class="individual_image_container">  
-                <div class="image-elem">                    
-                </div>   
+                <!-- <div class="image-elem">                    
+                </div>    -->
                 <!-- <div class="individual_last">
                     <div class="image_comments"></div>
                     <div class="login_request"><a href="/pages/login.html">Sign in</a> to leave a comment</div>
@@ -135,7 +136,7 @@
 
         <div class="individual_profile">
             <div class="author_profile">
-                <div class="profile_image"></div>
+                <div  id="profile-image" class="profile_image user_profile_pic"></div>
                 <div class="profile_name" style="margin-left: 10px;"></div>
             </div>
             <hr class="individual_up">
