--- a/pages/photos.html
+++ b/pages/photos.html
@@ -11,6 +11,7 @@
         <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="../scripts/index.js"></script>
+        <script src="../scripts/individual.js"></script>
         <script src="/config.js"></script>
         <script src="../scripts/photos.js"></script>
         <script src="/scripts/session.js"></script>
@@ -94,7 +95,7 @@
                             <li><a href="/pages/upload.html">Upload</a></li>
                             <li><a href="/pages/settings.html">settings</a></li>
                             <hr>
-                            <li><a href="#">Logout</a></li>
+                            <li onclick="logOut()"><a href="#" onclick="logOut()">Logout</a></li>
                         </ul>
                     </li>
                     <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
@@ -144,7 +145,7 @@
                             <p>Free Images and Videos you can use anywhere</p>
                             <p>JOIN ImageGram</p>
                             <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
-                            <a href="/pages/register.html"><button>Sign up, it's free!</button></a>
+                            <a class="sign-up" href="/pages/register.html"><button>Sign up, it's free!</button></a>
                         </div>
                     </div>
                 </div>
