added modal to delete

--- a/pages/myprofile.html
+++ b/pages/myprofile.html
@@ -125,7 +125,10 @@
         </div>
         <div class="myprofile_images">
             <div class="myprofile_images_container">
-                <div class="myprofile_images_wrapper">                   
+                <div class="myprofile_images_wrapper">  
+                    <div class="upload-myimage">
+                        <button><a href="upload.html">Upload Images Now</a></button>
+                    </div>                 
                 </div>
             </div>
         </div>
