social share introduce

--- a/pages/search.html
+++ b/pages/search.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/scripts/index.js"></script>
+    <script src="/scripts/individual.js"></script>
     <script src="../scripts/search.js"></script>
     <script src="/config.js"></script>
 </head>
@@ -119,6 +120,8 @@
             </div>
         </div>
     </div>
+
+    <div class="sign-up"></div>
     <script>
         $(document).ready(() => {
             $('.user_profile_pic').click((e) => {
