changed register options buttons

--- a/pages/search.html
+++ b/pages/search.html
@@ -15,6 +15,7 @@
     <script src="/scripts/individual.js"></script>
     <script src="../scripts/search.js"></script>
     <script src="/config.js"></script>
+    <script src="/scripts/session.js"></script>
 </head>
 <body>
     <header>
@@ -101,7 +102,7 @@
                         <li><a href="/pages/upload.html">Upload</a></li>
                         <li><a href="/pages/settings.html">settings</a></li>
                         <hr>
-                        <li onclick="logOut()"><a href="#">Logout</a></li>
+                        <li onclick="logOut()"><a onclick="logOut()" href="#">Logout</a></li>
                     </ul>
                 </li>
                 <li class="display-right nav-pad"><a href="/pages/upload.html"><button class="upload_button nav-hide"><i class="fas fa-upload"></i> Upload</button></a></li>
