--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                     <li><a class="hide-nav-option" href="/pages/photos.html">Photos</a></li>
                                     <li><a class="hide-nav-option" href="/pages/illustration.html">Illustrations</a></li>
                                     <li><a class="hide-nav-option" href="/pages/vectors.html">Vectors</a></li>
-                                    <hr class="hide-nav-option">
+                                    <hr class="hide-nav-option" id="hr-hide" >
                                     <li>
                                         <ul class="media-option">
                                             <li><a href="#">Editor's Choice</a></li>
@@ -45,18 +45,18 @@
                                     </li>                                   
                                     
                                 </ul>
-                                <hr>
+                                <hr id="hr-hide" >
                                 <ul class="community">
                                     <b>Community</b>
                                     <li><a href="#">Blog</a></li>
                                     <li><a href="#">Artists</a></li>
                                 </ul>
-                                <hr>
+                                <hr  id="hr-hide" >
                                 <ul class="about">
                                     <b>About</b>
                                     <li><a class="about_us" href="#">About Us</a></li>
                                     <!-- <li><a class="language_icon" href="#"><i class="fas fa-globe"></i> Language</a></li> -->
-                                    <hr class="my-hr-line">                                    
+                                    <hr class="my-hr-line" id="hr-hide">                                    
                                     <li class="social_icons">
                                     
                                         <a class="icon" href="https://www.facebook.com/yesh.surya.5" target="_blank"><i class="fab fa-facebook-square"></i></a>
