--- a/pages/myprofile.html
+++ b/pages/myprofile.html
@@ -133,6 +133,12 @@
             </div>
         </div>
 
+        <!-- Footer -->
+
+        <div class="myprofile-footer">
+            
+        </div>
+
         <script>
             $(document).ready(() => {
                 $('.user_profile_pic').click((e) => {
