added download image feature

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                                 <hr id="hr-hide" >
                                 <ul class="community">
                                     <b>Community</b>
-                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="https://my-blog-app-2ffbe.web.app" target="_blank">Blog</a></li>
                                     <li><a href="#">Artists</a></li>
                                 </ul>
                                 <hr  id="hr-hide" >
                                 <ul class="about">
                                     <b>About</b>
-                                    <li><a class="about_us" href="#">About Us</a></li>
+                                    <li><a class="about_us" href=" https://design-portfolio-af396.web.app" target="_blank">About Us</a></li>
                                     <!-- <li><a class="language_icon" href="#"><i class="fas fa-globe"></i> Language</a></li> -->
                                     <hr class="my-hr-line" id="hr-hide">                                    
                                     <li class="social_icons">
@@ -108,9 +108,9 @@
                     <div class="search-select">
                         <select name="option" id="option">
                             <option id="image_option" value="image">Images</option>
-                            <option id="photo_option" value="photo">photos</option>
-                            <option id="vector_option" value="vector">vector Graphics</option>
-                            <option id="illustration_option" value="illustration">illustrations</option>
+                            <option id="photo_option" value="photo">Photos</option>
+                            <option id="vector_option" value="vector">Vector Graphics</option>
+                            <option id="illustration_option" value="illustration">Illustrations</option>
                         </select>
                         <span class="search_arrow"><i class="fas fa-angle-down search_arrow"></i></span>
                     </div>
@@ -134,6 +134,7 @@
                             <p class="end_footer">Download royalty free photos, videos and music. Share your own pictures as public domain with people all over the world.</p>
                             <a class="sign-up" href="/pages/register.html"><button>Sign up, it's free!</button></a>
                         </div>
+                        
                     </div>
                 </div>
             </div>
