--- a/pages/illustration.html
+++ b/pages/illustration.html
@@ -55,13 +55,13 @@
                                 <hr>
                                 <ul class="community">
                                     <b>Community</b>
-                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="https://my-blog-app-2ffbe.web.app" target="_blank">Blog</a></li>
                                     <li><a href="#">Artists</a></li>
                                 </ul>
                                 <hr>
                                 <ul class="about">
                                     <b>About</b>
-                                    <li><a class="about_us" href="#">About Us</a></li>
+                                    <li><a class="about_us" href="https://design-portfolio-af396.web.app" target="_blank">About Us</a></li>
                                     <!-- <li><a class="language_icon" href="#"><i class="fas fa-globe"></i> Language</a></li> -->
                                     <hr class="my-hr-line">                                    
                                     <li class="social_icons">
