--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -14,7 +14,8 @@
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../scripts/index.js"></script>
-    <!-- <script src=""></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.0/FileSaver.min.js"></script> -->
+    <script src="/scripts/FileSaver.js"></script>
     <script src="../scripts/individual.js"></script>
     <script src="../config1.js"></script>
     <script src="../scripts/session.js"></script>
@@ -70,13 +71,13 @@
                             <hr>
                             <ul class="community">
                                 <b>Community</b>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="https://my-blog-app-2ffbe.web.app" target="_blank">Blog</a></li>
                                 <li><a href="#">Artists</a></li>
                             </ul>
                             <hr>
                             <ul class="about">
                                 <b>About</b>
-                                <li><a class="about_us" href="#">About Us</a></li>
+                                <li><a class="about_us" href="https://design-portfolio-af396.web.app" target="_blank">About Us</a></li>
                                 <!-- <li><a class="language_icon" href="#"><i class="fas fa-globe"></i> Language</a></li> -->
                                 <hr class="my-hr-line">                                    
                                 <li class="social_icons">
