--- a/pages/search.html
+++ b/pages/search.html
@@ -69,13 +69,13 @@
                             <hr>
                             <ul class="community">
                                 <b>Community</b>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="https://my-blog-app-2ffbe.web.app" target="_blank">Blog</a></li>
                                 <li><a href="#">Artists</a></li>
                             </ul>
                             <hr>
                             <ul class="about">
                                 <b>About</b>
-                                <li><a class="about_us" href="#">About Us</a></li>
+                                <li><a class="about_us" href=" https://design-portfolio-af396.web.app" target="_blank">About Us</a></li>
                                 <hr class="my-hr-line">                                    
                                 <li class="social_icons">
                                 
@@ -117,10 +117,23 @@
     <div class="search_images">
         <div class="search_images_container">
             <div class="search_wrapper">
+
+
                     
+            </div>
+            <div class="search-footer">
+                <h1>ImageGram</h1>
+                <p>Follow us on:</p>
+                <div class="search-icons">
+                    <a class="icon" href="https://www.facebook.com/yesh.surya.5" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a class="icon" href="https://www.instagram.com/yeshwanth_nadh/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="icon" href="https://twitter.com/yeshsuriya" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
 
     <div class="sign-up"></div>
     <script>
