--- a/pages/upload.html
+++ b/pages/upload.html
@@ -68,13 +68,13 @@
                                 <hr>
                                 <ul class="community">
                                     <b>Community</b>
-                                    <li><a href="#">Blog</a></li>
+                                    <li><a href="https://my-blog-app-2ffbe.web.app" target="_blank">Blog</a></li>
                                     <li><a href="#">Artists</a></li>
                                 </ul>
                                 <hr>
                                 <ul class="about">
                                     <b>About</b>
-                                    <li><a class="about_us" href="#">About Us</a></li>
+                                    <li><a class="about_us" href=" https://design-portfolio-af396.web.app" target="_blank">About Us</a></li>
                                     <hr class="my-hr-line">                                    
                                     <li class="social_icons">
                                         <a class="icon" href="https://www.facebook.com/yesh.surya.5" target="_blank"><i class="fab fa-facebook-square"></i></a>
@@ -124,9 +124,9 @@
             <form id="upload-user-image">
                 <label for="name">Name of the Image:</label>
                 <input type="text" id="name" name="name" required><br><br>
-                <label id="tag" for="tags">Enter any <b>Four</b> tags that describes the Image:</label>
+                <label id="tag" for="tags">Enter any <b>Four</b> tags that describes the best of the Image:</label>
                 <input type="text" id="tags" name="tags" data-role="tagsinput" required/>
-                <input id="image_upload" type="file" name="image" required>
+                <input id="image_upload" type="file" name="image" value="Choose File To Upload" required>
                 <input id="submit" type="submit" value="Submit">
             </form>
             
