--- a/pages/individual-image.html
+++ b/pages/individual-image.html
@@ -159,7 +159,7 @@
             <div class="manage-images">
                 <div class="download-image">
                     <button class="individual_delete"><i class="fas fa-trash"></i> Delete Image</button>
-                    <button class="img-dwnld"><i class="far fa-eye"></i> Preview Image</button>
+                    <button class="img-dwnld"><i class="fas fa-cloud-download-alt"></i> Download Image</button>
                 </div>
             </div>
             
