--- a/pages/login.html
+++ b/pages/login.html
@@ -191,7 +191,7 @@
 
 
 
-            let url = `http://localhost:3002`
+            let url = `https://image-site-app.herokuapp.com/`
 
             function userLogin(e){
                 e.preventDefault();
@@ -201,7 +201,7 @@
                     password: loginForm.password.value
                 }
 
-                fetch(`${url}/users/login`, {
+                fetch(`${url}users/login`, {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
