--- a/pages/register.html
+++ b/pages/register.html
@@ -150,7 +150,7 @@
             regForm.addEventListener("submit",(e) => {
                 e.preventDefault();
 
-                let URL = `http://localhost:3002`
+                let URL = `https://image-site-app.herokuapp.com/`
 
                 let payload = {
                     email: regForm.email.value,
@@ -158,7 +158,7 @@
                     password: regForm.password.value
                 }
 
-                fetch(`${URL}/users/register`,{
+                fetch(`${URL}users/register`,{
                     method: "POST",
                     headers: {
                         'Content-Type' : "application/json"
